[package]
name = "testsbf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "level0exploit"

[dependencies]
solana-program = "=1.11.2"
borsh = "0.9.3"
borsh-derive = "0.9.3"
spl-token = { version = "3", features = ["no-entrypoint"] }
